--- a/index.html
+++ b/index.html
@@ -8,6 +8,19 @@
     <link rel="stylesheet" type="text/css" href="css/styles.css">
     <link href="https://use.fontawesome.com/releases/v5.0.8/css/all.css" rel="stylesheet">
     <link rel="icon" href="image/favicon_io/favicon.ico">
+
+    <meta property="og:title" content="Dynamic Bingo" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://tacky0612.github.io/DynamicBingo/" />
+    <meta property="og:image" content="https://tacky0612.github.io/ConoHaPuzzle/image/bingosheet.png" />
+    <meta property="og:description" content="16マスのパズル" />
+
+    <meta name="twitter:card" content="summary"">
+    <meta name="twitter:site" content="@tacky0612">
+    <meta name="twitter:creator" content="@tacky0612" />
+    <meta name="twitter:title" content="Dynamic Bingo">
+    <meta name="twitter:description" content="動的にマスの数を変更できるビンゴシートです">
+    <meta name="twitter:image" content="https://tacky0612.github.io/ConoHaPuzzle/image/bingosheet.png">
 </head>
 
 <body>
