change bingo message

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://tacky0612.github.io/DynamicBingo/" />
     <meta property="og:image" content="https://tacky0612.github.io/DynamicBingo/image/bingosheet.png" />
-    <meta property="og:description" content="16マスのパズル" />
+    <meta property="og:description" content="動的にマスの数を変更できるビンゴシートです" />
 
-    <meta name="twitter:card" content="summary"">
+    <meta name="twitter:card" content="summary">
     <meta name="twitter:site" content="@tacky0612">
     <meta name="twitter:creator" content="@tacky0612" />
     <meta name="twitter:title" content="Dynamic Bingo">
@@ -92,7 +92,7 @@
     <div class="popup" id="popup">
         <div class="popup-inner">
             <div class="close-btn" id="js-close-btn"><i class="fas fa-times"></i></div>
-            <h1>BINGO!!</h1>
+                <h2>BINGO!!</h2>
         </div>
         <div class="black-background" id="js-black-bg"></div>
     </div>
